provisional fix for overflowing dialog inputs
they are sized in html code. for the time being, overflowed part is
hidden.

--- a/memodump/css/moinizer.css
+++ b/memodump/css/moinizer.css
@@ -48,6 +48,10 @@
 	border: none;
 }
 
+.dialog {
+	overflow: hidden;
+}
+
 /*=========================================================
    text decorations etc
 ===========================================================*/
